Removed follow button on user profile. Fixed occupation sliding up behind avatar css issue.

--- a/public/stylesheets/sass/analytics.sass
+++ b/public/stylesheets/sass/analytics.sass
@@ -172,7 +172,7 @@
 					padding-top: 5px
 				a.name
 					margin-left: 30px
-					width: 218px
+					width: 195px
 				a.rewards
 					width: 140px
 				a.views
