--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -44,11 +44,11 @@ ul.users
 		.avatar-name
 			margin-top: 10px
 			position: relative
-			min-height: 50px
+			min-height: 60px
 		.avatar
 			position: absolute
 			float: left
-			width: 50px
+			width: 60px
 			img
 				width: 60px
 				height: 60px
@@ -60,6 +60,7 @@ ul.users
 			text-transform: uppercase
 			line-height: 31px
 			letter-spacing: -.5px
+			min-height: 60px
 		.avatar, .name, .tagline
 			margin-bottom: 10px
 		.occupation
