--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4547,11 +4547,11 @@ ul.users li.user:nth-child(3n+3) {
   .user-profile .user-info .avatar-name {
     margin-top: 10px;
     position: relative;
-    min-height: 50px; }
+    min-height: 60px; }
   .user-profile .user-info .avatar {
     position: absolute;
     float: left;
-    width: 50px; }
+    width: 60px; }
     .user-profile .user-info .avatar img {
       width: 60px;
       height: 60px; }
@@ -4562,7 +4562,8 @@ ul.users li.user:nth-child(3n+3) {
     font-family: "facitweb-1", "facitweb-2", helvetica, sans-serif;
     text-transform: uppercase;
     line-height: 31px;
-    letter-spacing: -0.5px; }
+    letter-spacing: -0.5px;
+    min-height: 60px; }
   .user-profile .user-info .avatar, .user-profile .user-info .name, .user-profile .user-info .tagline {
     margin-bottom: 10px; }
   .user-profile .user-info .occupation {
@@ -5853,7 +5854,7 @@ header .topic-icon {
     padding-top: 5px; }
   #creator-analytics .data #patron-list header a.name {
     margin-left: 30px;
-    width: 218px; }
+    width: 195px; }
   #creator-analytics .data #patron-list header a.rewards {
     width: 140px; }
   #creator-analytics .data #patron-list header a.views {
